<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Authentification"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#ffffffff">


    <ImageView
        android:id="@+id/android_logo2"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:padding="-40dp"

        android:src="@drawable/rapace"

        android:layout_weight="0.12"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textStyle="bold"
            android:textColor="#ffff62d5"
            android:layout_gravity="center_horizontal"
            android:id="@+id/titre"
            android:layout_marginBottom="50dp" />

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="418dp"
        android:orientation="vertical">



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
            <!--  Email TextField -->

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <!--  Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_gravity="center_horizontal"
                android:text="@string/password"
                android:textStyle="bold"/>

            <!--  Password TextField -->
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword" />

            <!--  Login Button -->
            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberme"
                android:layout_gravity="right"/>

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:id="@+id/connexionButtton"
            android:layout_gravity="center" />
        </LinearLayout>
</LinearLayout>
